[DC-2891] add swagger

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,6 +47,9 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 # ~~~~
 # Additional play modules can be added here
 
+# swagger module
+play.modules.enabled += "play.modules.swagger.SwaggerModule"
+
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
 
 # Secret key
