[DC-2891] fix swagger endpoint

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,6 +52,13 @@ play.modules.enabled += "play.modules.swagger.SwaggerModule"
 
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
 
+# Setup swagger config used by the plugin
+api.version = ${?APP_VERSION}   #Set via env var, injected automatically on k8s
+swagger.api.info {
+  description = "Endpoints exposed by the channel-preferences microservice"
+  title = "channel-preferences"
+  contact = "#team-digital-contact"
+}
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
