[DC-2891] configure microservice as per instruction
https://confluence.tools.tax.service.gov.uk/display/DCT/Create+a+new+microservice

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,16 @@
+# Copyright 2020 HM Revenue & Customs
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
 include "backend.conf"
 
@@ -34,8 +47,18 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 # ~~~~
 # Additional play modules can be added here
 
+# swagger module
+play.modules.enabled += "play.modules.swagger.SwaggerModule"
+
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
 
+# Setup swagger config used by the plugin
+api.version = ${?APP_VERSION}   #Set via env var, injected automatically on k8s
+swagger.api.info {
+  description = "Endpoints exposed by the channel-preferences microservice"
+  title = "channel-preferences"
+  contact = "#team-digital-contact"
+}
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
