[DC-2998] Proxy all calls from channel-preferences to entity-resolver

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,8 +47,9 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 # ~~~~
 # Additional play modules can be added here
 
-
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
+
+play.modules.enabled += "uk.gov.hmrc.channelpreferences.config.DIModule"
 
 # Setup swagger config used by the plugin
 api.version = ${?APP_VERSION}   #Set via env var, injected automatically on k8s
@@ -89,9 +90,9 @@ controllers {
   # 300 is the default, you may need to change this according to your needs
   confidenceLevel = 300
 
-  uk.gov.hmrc.channelpreferences.controllers.MicroserviceHelloWorldController = {
+  uk.gov.hmrc.channelpreferences.controllers.ProxyController = {
     needsAuth = false
-    needsLogging = false
+    needsLogging = true
     needsAuditing = false
   }
 }
@@ -141,3 +142,4 @@ microservice {
   }
 }
 
+entityResolverUrl = "http://localhost:8015"
