--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2020 HM Revenue & Customs
+# Copyright 2021 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -139,7 +139,15 @@ microservice {
       host = localhost
       port = 8500
     }
+    customs-data-store {
+      host = localhost
+      port = 9893
+    }
+    entity-resolver {
+      host = localhost
+      port = 8015
+    }
   }
 }
 
-entityResolverUrl = "http://localhost:8015"
+
